--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -22,20 +22,20 @@
     </header>
 
     <nav class="nav">
-      <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
+      <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
       <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
-      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong> Translation Technology</a>
+      <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
     <main class="card">
-      <h3>The <strong>Modality Principle</strong> in Online Learning</h3>
+      <h3><strong>AI Avatars</strong> in Online Learning</h3>
 
       <!-- Responsive iframe wrapper -->
       <div class="iframeWrap">
         <iframe
-          src="https://youtu.be/jMZAN5S_Gdk"
-          title="YouTube video player"
+          src="https://haydukross.github.io/IST526/Final/index.html"
+          title="Online Learning Created in Articulate Storyline"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
