--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -22,10 +22,10 @@
     </header>
 
     <nav class="nav">
-      <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
+      <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
       <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
-      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong> Translation Technology</a>
+      <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
     <main class="card">
