--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -25,17 +25,17 @@
       <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
       <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
-      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong> Translation Technology</a>
+      <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
     <main class="card">
-      <h3>Using the <strong>HeyGen</strong> Translation Technology</h3>
+      <h3><strong>CSUMB MIST</strong> Capstone Deliverables</h3>
 
       <!-- Responsive iframe wrapper -->
       <div class="iframeWrap">
         <iframe
-          src="https://youtu.be/u3V55yZoW6U"
-          title="YouTube Video Player"
+          src="https://docs.google.com/document/d/1wmpsHqhr9S3Nercp3S0uTKkvLk1dhP84xqPXpoHbN9c/edit?tab=t.0"
+          title="Google Docs - Capstone Criteria"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
