--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -24,7 +24,7 @@
     <nav class="nav">
       <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
+      <a class="btn" href="page3.html">Creating a <strong>HeyGen</strong> “Digital Twin”</a>
       <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
@@ -32,13 +32,17 @@
       <h3><strong>AI Avatars</strong> in Online Learning</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
+      <div class="frame">
         <iframe
           src="https://haydukross.github.io/IST526/Final/index.html"
-          title="Online Learning Created in Articulate Storyline"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          title="Articulate Storyline Course: Online Learning Example"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          loading="lazy"
           allowfullscreen></iframe>
       </div>
+
+      <p>If the embed doesn’t load, <a href="https://haydukross.github.io/IST526/Final/index.html" target="_blank" rel="noopener">open the course in a new tab</a>.</p>
     </main>
   </div>
 </body>
