--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -22,9 +22,9 @@
     </header>
 
     <nav class="nav">
-      <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
+      <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
+      <a class="btn" href="page3.html">Creating a <strong>HeyGen</strong> “Digital Twin”</a>
       <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
@@ -32,14 +32,7 @@
       <h3><strong>CSUMB MIST</strong> Capstone Deliverables</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
+      <div class="frame">
         <iframe
-          src="https://docs.google.com/document/d/1wmpsHqhr9S3Nercp3S0uTKkvLk1dhP84xqPXpoHbN9c/edit?tab=t.0"
-          title="Google Docs - Capstone Criteria"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-    </main>
-  </div>
-</body>
-</html>
+          src="https://docs.google.com/document/d/1wmpsHqhr9S3Nercp3S0uTKkvLk1dhP84xqPXpoHbN9c/preview"
+          title="CSUMB MIST Capstone – Google Doc (Preview)"
