--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -24,7 +24,7 @@
     <nav class="nav">
       <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
+      <a class="btn" href="page3.html">Creating a <strong>HeyGen</strong> “Digital Twin”</a>
       <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
@@ -32,13 +32,17 @@
       <h3>Using <strong>HeyGen</strong> at CSUMB's MIST Program</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
+      <div class="frame">
         <iframe
-          src="https://youtu.be/CXJm-zxOmY8"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          src="https://www.youtube.com/embed/CXJm-zxOmY8"
+          title="Using HeyGen at CSUMB's MIST Program (YouTube)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          loading="lazy"
           allowfullscreen></iframe>
       </div>
+
+      <p>Watch directly on <a href="https://youtu.be/CXJm-zxOmY8" target="_blank" rel="noopener">YouTube</a> if needed.</p>
     </main>
   </div>
 </body>
