--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -24,22 +24,22 @@
     <nav class="nav">
       <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
       <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
+      <a class="btn" href="page3.html">Creating a <strong>HeyGen</strong> “Digital Twin”</a>
       <a class="btn" href="page4.html"><strong>CSUMB MIST</strong> Capstone Deliverables</a>
     </nav>
 
     <main class="card">
-      <h3>Creating A <strong>HeyGen</strong> "Digital Twin"</h3>
+      <h3>Creating a <strong>HeyGen</strong> “Digital Twin”</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
+      <div class="frame">
         <iframe
-          src="https://youtu.be/m0fdgkJGxHs"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          src="https://www.youtube.com/embed/m0fdgkJGxHs"
+          title="Creating a HeyGen Digital Twin (YouTube)"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          loading="lazy"
           allowfullscreen></iframe>
       </div>
-    </main>
-  </div>
-</body>
-</html>
+
+      <p>Watch directly on <a href="https://youtu.be/m0fdgkJGxH
