--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -34,12 +34,13 @@
       <!-- Responsive iframe wrapper -->
       <div class="frame">
         <iframe
-          src="https://www.youtube.com/embed/m0fdgkJGxHs"
-          title="Creating a HeyGen Digital Twin (YouTube)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          loading="lazy"
-          allowfullscreen></iframe>
+    		src="https://www.youtube.com/embed/m0fdgkJGxHs"
+    		title="Creating a HeyGen Digital Twin (YouTube)"
+    		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    		allowfullscreen
+    		referrerpolicy="strict-origin-when-cross-origin"
+    		loading="lazy">
+		</iframe>
       </div>
 
       <p>Watch directly on <a href="https://youtu.be/m0fdgkJGxH
