--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -34,12 +34,13 @@
       <!-- Responsive iframe wrapper -->
       <div class="frame">
         <iframe
-          src="https://www.youtube.com/embed/CXJm-zxOmY8"
-          title="Using HeyGen at CSUMB's MIST Program (YouTube)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          loading="lazy"
-          allowfullscreen></iframe>
+    		src="https://www.youtube.com/embed/CXJm-zxOmY8"
+    		title="Using HeyGen at CSUMB's MIST Program (YouTube)"
+    		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    		allowfullscreen
+    		referrerpolicy="strict-origin-when-cross-origin"
+    		loading="lazy">
+		</iframe>
       </div>
 
       <p>Watch directly on <a href="https://youtu.be/CXJm-zxOmY8" target="_blank" rel="noopener">YouTube</a> if needed.</p>
