--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -33,6 +33,11 @@
 
       <!-- Responsive iframe wrapper -->
       <div class="frame">
-        <iframe
-          src="https://docs.google.com/document/d/1wmpsHqhr9S3Nercp3S0uTKkvLk1dhP84xqPXpoHbN9c/preview"
-          title="CSUMB MIST Capstone – Google Doc (Preview)"
+  <iframe
+    src="https://docs.google.com/document/d/YOUR_DOC_ID/preview"
+    title="CSUMB MIST Capstone – Google Doc (Preview)"
+    loading="lazy"
+    referrerpolicy="strict-origin-when-cross-origin"
+    allowfullscreen></iframe>
+</div>
+<p>If the embed doesn’t load, <a href="https://docs.google.com/document/d/YOUR_DOC_ID/edit?usp=sharing" target="_blank" rel="noopener">open the Doc in a new tab</a>.</p>
