--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adding External Content using iFrames</title>
+  <title>Adding External Content using iFrames – Page 1</title>
 
-  <!-- Font to match the site -->
+  <!-- Typography -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 
-  <!-- Styles -->
+  <!-- External CSS (match the exact filename/casing in your repo) -->
   <link href="css/Lab3.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,14 @@
     <main class="card">
       <h3><strong>AI Avatars</strong> in Online Learning</h3>
 
-      <!-- Responsive iframe wrapper -->
+      <!-- Assignment requires a brief description ABOVE the iframe -->
+      <h2>Brief description of content to be embedded</h2>
+      <p>
+        This page embeds a public course as an example of external web content. It demonstrates how to
+        frame a complete learning object inside your page and still keep your site layout intact.
+      </p>
+
+      <!-- Responsive iframe wrapper (styled by Lab3.css) -->
       <div class="frame">
         <iframe
           src="https://haydukross.github.io/IST526/Final/index.html"
@@ -42,7 +49,12 @@
           allowfullscreen></iframe>
       </div>
 
-      <p>If the embed doesn’t load, <a href="https://haydukross.github.io/IST526/Final/index.html" target="_blank" rel="noopener">open the course in a new tab</a>.</p>
+      <p>
+        If the embed doesn’t load, 
+        <a href="https://haydukross.github.io/IST526/Final/index.html" target="_blank" rel="noopener">
+          open the course in a new tab
+        </a>.
+      </p>
     </main>
   </div>
 </body>
