--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -21,12 +21,12 @@
       <h2>An Assignment for IST 541's Lab 3</h2>
     </header>
 
-    <nav class="nav">
-      <a class="btn" href="index.html"><strong>AI Avatars</strong> in Online Learning</a>
-      <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating a <strong>HeyGen</strong> “Digital Twin”</a>
-      <a class="btn" href="page4.html">Exploring <strong>AI Avatars</strong> in Education</a>
-    </nav>
+    <nav class="pill-row">
+    <a class="pill" href="index.html">AI Avatars in Online Learning</a>
+    <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
+    <a class="pill" href="page3.html">Creating a HeyGen “Digital Twin”</a>
+    <a class="pill" href="page4.html">Exploring AI Avatars in Education</a>
+  </nav>
 
     <main class="card">
       <h3><strong>AI Avatars</strong> in Online Learning</h3>
