--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -35,7 +35,7 @@
       <h2>Brief description of content to be embedded</h2>
       <p>
         This page embeds a public course as an example of external web content. It demonstrates how to
-        frame a complete learning object inside your page and still keep your site layout intact.
+        frame a complete learning object inside of a page and still keep the site layout intact.
       </p>
 
       <!-- Responsive iframe wrapper (styled by Lab3.css) -->
