--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -1,69 +1,59 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Adding External Content using iFrames – Page 4</title>
+  <meta charset="UTF-8">
+  <title>Exploring AI Avatars in Education</title>
 
-  <!-- Fonts (match Lab pages) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 
-  <!-- Site styles -->
   <link href="css/Lab3.css" rel="stylesheet" type="text/css">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
-  <div id="wrapper">
-    <header id="header">
+
+  <header class="header">
+    <div class="container">
       <h1>How to Add External Content with iFrames</h1>
       <h2>An Assignment for IST 541's Lab 3</h2>
 
-      <nav class="pill-row">
-    <a class="pill" href="index.html">AI Avatars in Online Learning</a>
-    <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
-    <a class="pill" href="page3.html">Creating a HeyGen “Digital Twin”</a>
-    <a class="pill" href="page4.html">Exploring AI Avatars in Education</a>
-  </nav>
-    </header>
+      <nav class="pill-row" aria-label="Primary navigation">
+        <a class="pill" href="index.html">AI Avatars in Online Learning</a>
+        <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
+        <a class="pill" href="page3.html">Creating a HeyGen “Digital Twin”</a>
+        <a class="pill active" href="page4.html">Exploring AI Avatars in Education</a>
+      </nav>
+    </div>
+  </header>
 
-    <main id="content">
-      <section>
-        <h2>Exploring AI Avatars in Education</h2>
-        <p>
-          This page embeds the tutorial <strong>Using AI Avatars in Education</strong> that was placed in the
-          <code>tool-content</code> folder. The example demonstrates how to load a complete, published module
-          inside this site using an iFrame.
+  <main class="main">
+    <div class="container">
+      <section class="section">
+        <h2 class="mt-0">Exploring AI Avatars in Education</h2>
+        <p class="lede">
+          This page embeds the tutorial <strong>Using AI Avatars in Education</strong> placed in your
+          <code>tool-content</code> folder. Publish that page and use its full URL below.
         </p>
 
-        <!-- Responsive embed -->
-        <div style="position: relative; width: 100%; height: 80vh; max-height: 90vh; border: 0;">
+        <div class="iframe-wrap">
+          <!-- Replace the src with your published tutorial URL in /tool-content -->
           <iframe
-            src="tool-content/index.html"
-            title="Exploring AI Avatars in Education"
-            style="position:absolute; inset:0; width:100%; height:100%; border:0;"
-			frameborder="0" allow="autoplay;"
-            loading="lazy"
-            allowfullscreen>
-          </iframe>
+            src="https://haydukross.github.io/IST541/Lab3/tool-content/using-ai-avatars.html"
+            title="Using AI Avatars in Education"></iframe>
         </div>
 
-        <p style="margin-top: 0.75rem;">
-          If the embed doesn’t load, <a href="tool-content/index.html" target="_blank" rel="noopener">open the module in a new tab</a>.
+        <p class="mt-16">
+          If the tutorial doesn’t appear, confirm the file exists at that path, the name matches exactly
+          (including case), and that GitHub Pages has finished publishing.
         </p>
       </section>
-    </main>
+    </div>
+  </main>
 
-    <footer id="footer">
-      <p>&copy; <span id="year"></span> Ross Hayduk</p>
-    </footer>
-  </div>
-
-  <script>
-    // tiny helper to keep the footer year current
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <footer class="footer">
+    <div class="container">
+      © 2025 IST 541 • Lab 3
+    </div>
+  </footer>
 </body>
 </html>
