--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <section class="section">
         <h2 class="mt-0">AI Avatars in Online Learning</h2>
-        <p class="lede">This page matches the Lab 2 style and demonstrates a clean YouTube embed.</p>
+        <p class="lede">This page demonstrates a clean YouTube embed.</p>
 
         <div class="iframe-wrap">
           <iframe
@@ -40,14 +40,14 @@
             allowfullscreen></iframe>
         </div>
 
-        <p class="mt-16">Use the pill links above to view more examples.</p>
+        <p class="mt-16"></p>
       </section>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      © 2025 IST 541 • Lab 3
+      © 2025 Ross M. Hayduk
     </div>
   </footer>
 </body>
