--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -30,23 +30,22 @@
     <div class="container">
       <section class="section">
         <h2 class="mt-0">Using HeyGen at CSUMB's MIST Program</h2>
-        <p class="lede">Embed a public Google Drive file, Docs preview, or another hosted module here.</p>
+        <p class="lede">This is an embedded YouTube video.</p>
 
         <div class="iframe-wrap">
-          <!-- Example: Google Docs preview. Replace the src with your Doc's /preview link. -->
           <iframe
             src="https://docs.google.com/document/d/1G2d_example_preview/pub?embedded=true"
             title="Google Doc Preview"></iframe>
         </div>
 
-        <p class="mt-16">If your Google Doc doesn’t load, ensure link sharing is Public and use the preview/embed URL.</p>
+        <p class="mt-16"></p>
       </section>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      © 2025 IST 541 • Lab 3
+      © 2025 Ross M. Hayduk
     </div>
   </footer>
 </body>
