--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -31,28 +31,24 @@
       <section class="section">
         <h2 class="mt-0">Exploring AI Avatars in Education</h2>
         <p class="lede">
-          This page embeds the tutorial <strong>Using AI Avatars in Education</strong> placed in your
-          <code>tool-content</code> folder. Publish that page and use its full URL below.
+          This page embeds the Articulate Storyline tutorial <strong>Using AI Avatars in Education</strong> placed in the
+          <code>tool-content</code> folder.
         </p>
 
         <div class="iframe-wrap">
-          <!-- Replace the src with your published tutorial URL in /tool-content -->
           <iframe
             src="https://haydukross.github.io/IST541/Lab3/tool-content/using-ai-avatars.html"
             title="Using AI Avatars in Education"></iframe>
         </div>
 
-        <p class="mt-16">
-          If the tutorial doesn’t appear, confirm the file exists at that path, the name matches exactly
-          (including case), and that GitHub Pages has finished publishing.
-        </p>
+        <p class="mt-16"></p>
       </section>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      © 2025 IST 541 • Lab 3
+      © 2025 Ross M. Hayduk
     </div>
   </footer>
 </body>
