--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -30,23 +30,22 @@
     <div class="container">
       <section class="section">
         <h2 class="mt-0">Creating a HeyGen “Digital Twin”</h2>
-        <p class="lede">Embed a published HeyGen project or an external site that demonstrates the “Digital Twin.”</p>
+        <p class="lede">This is an embedded HeyGen “Digital Twin” presentation.</p>
 
         <div class="iframe-wrap">
-          <!-- Replace with your HeyGen share URL or a hosted demo page -->
           <iframe
             src="https://www.heygen.com/"
             title="HeyGen"></iframe>
         </div>
 
-        <p class="mt-16">If HeyGen blocks embedding, create an intermediate page that you can embed, or use a video demo.</p>
+        <p class="mt-16"></p>
       </section>
     </div>
   </main>
 
   <footer class="footer">
     <div class="container">
-      © 2025 IST 541 • Lab 3
+      © 2025 Ross M. Hayduk
     </div>
   </footer>
 </body>
