--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -32,11 +32,7 @@
         <h2 class="mt-0">Using HeyGen at CSUMB's MIST Program</h2>
         <p class="lede">This is an embedded YouTube video.</p>
 
-        <div class="iframe-wrap">
-          <iframe
-            src="https://docs.google.com/document/d/1G2d_example_preview/pub?embedded=true"
-            title="Google Doc Preview"></iframe>
-        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CXJm-zxOmY8?si=_eEQXJFXrLjUNox7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         <p class="mt-16"></p>
       </section>
