--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -31,8 +31,7 @@
       <section class="section">
         <h2 class="mt-0">Exploring AI Avatars in Education</h2>
         <p class="lede">
-          This page embeds the Articulate Storyline tutorial <strong>Using AI Avatars in Education</strong> placed in the
-          <code>tool-content</code> folder.
+          This page embeds the Articulate Storyline tutorial <strong>Using AI Avatars in Education</strong> that was placed in the <code>tool-content</code> folder.
         </p>
 
         <div class="iframe-wrap">
