--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -45,8 +45,7 @@
       <section>
         <h2>Embedded Tutorial: AI Avatars in Online Learning</h2>
         <p>
-          This page embeds a complete learning object as an example of external web content.
-          It demonstrates how to frame a full course inside your site and keep your layout intact.
+          This page embeds a complete learning object.
         </p>
 
         <div class="embed-wrap">
@@ -58,9 +57,7 @@
             referrerpolicy="no-referrer"
             allowfullscreen>
           </iframe>
-          <p class="embed-note">
-            If the tutorial doesn’t load, <a href="https://haydukross.github.io/IST526/Final/index.html" target="_blank" rel="noopener">open it in a new tab</a>.
-          </p>
+          <p class="embed-note"></p>
         </div>
       </section>
     </main>
