--- a/IST541/Lab3/page3.html
+++ b/IST541/Lab3/page3.html
@@ -3,20 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Creating a HeyGen “Digital Twin”</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="css/Lab3.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
   <header class="header">
     <div class="container">
       <h1>How to Add External Content with iFrames</h1>
-      <h2>An Assignment for IST 541's Lab 3</h2>
-
+      <h2>An Assignment for IST 541, Lab 3</h2>
       <nav class="pill-row" aria-label="Primary navigation">
         <a class="pill" href="index.html">AI Avatars in Online Learning</a>
         <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
@@ -25,28 +22,20 @@
       </nav>
     </div>
   </header>
-
   <main class="main">
     <div class="container">
       <section class="section">
         <h2 class="mt-0">Creating a HeyGen “Digital Twin”</h2>
-        <p class="lede">This is an embedded HeyGen “Digital Twin” presentation.</p>
-
+        <p class="lede">This page embeds the HeyGen website as a placeholder for your Digital Twin demo.</p>
         <div class="iframe-wrap">
-          <iframe
-            src="https://www.heygen.com/"
-            title="HeyGen"></iframe>
+          <iframe src="https://www.heygen.com/" title="HeyGen Home"></iframe>
         </div>
-
         <p class="mt-16"></p>
       </section>
     </div>
   </main>
-
   <footer class="footer">
-    <div class="container">
-      © 2025 Ross M. Hayduk
-    </div>
+    <div class="container">© 2025 Ross M. Hayduk</div>
   </footer>
 </body>
 </html>
