--- a/IST541/Lab3/index.html
+++ b/IST541/Lab3/index.html
@@ -7,65 +7,40 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <!-- External CSS for Lab 3 -->
   <link href="css/Lab3.css" rel="stylesheet" type="text/css">
-  <style>
-    /* Minimal safety styles in case external CSS isn't loaded */
-    body { margin: 0; font-family: "Lexend", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-    #wrapper { max-width: 1100px; margin: 0 auto; padding: 1rem; }
-    header { padding: 1rem 0; }
-    nav a { margin-right: 1rem; text-decoration: none; }
-    .embed-wrap { margin-top: 1rem; }
-    .embed-note { margin: 0.5rem 0 0; font-size: 0.95rem; }
-    /* Make iframe fill available viewport height minus approximate header/nav text */
-    .embed-frame { width: 100%; height: calc(100vh - 240px); border: 0; }
-    @media (max-width: 768px) {
-      .embed-frame { height: calc(100vh - 280px); }
-    }
-  </style>
 </head>
-
 <body>
-  <div id="wrapper">
-<header class="header">
-    <div class="container">      
-	  <h1>How to Add External Content with iFrames</h1>
+  <header class="header">
+    <div class="container">
+      <h1>How to Add External Content with iFrames</h1>
       <h2>An Assignment for IST 541, Lab 3</h2>
-      
       <nav class="pill-row" aria-label="Primary navigation">
-        <a class="pill" href="index.html">AI Avatars in Online Learning</a>
-        <a class="pill active" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
+        <a class="pill active" href="index.html">AI Avatars in Online Learning</a>
+        <a class="pill" href="page2.html">Using HeyGen at CSUMB's MIST Program</a>
         <a class="pill" href="page3.html">Creating a HeyGen “Digital Twin”</a>
         <a class="pill" href="page4.html">Exploring AI Avatars in Education</a>
       </nav>
     </div>
   </header>
-	    
-    <main>
-      <section>
-        <h2>Embedded Tutorial: AI Avatars in Online Learning</h2>
-        <p>
-          This page embeds a complete learning object.
-        </p>
-
-        <div class="embed-wrap">
+  <main class="main">
+    <div class="container">
+      <section class="section">
+        <h2 class="mt-0">Embedded Tutorial: AI Avatars in Online Learning</h2>
+        <p class="lede">This page embeds a complete learning object hosted on GitHub Pages.</p>
+        <div class="iframe-wrap">
           <iframe
-            class="embed-frame"
             src="https://haydukross.github.io/IST526/Final/index.html"
             title="AI Avatars in Online Learning – Embedded Tutorial"
             loading="lazy"
             referrerpolicy="no-referrer"
-            allowfullscreen>
-          </iframe>
-          <p class="embed-note"></p>
+            allowfullscreen></iframe>
         </div>
+        <p class="mt-16"></p>
       </section>
-    </main>
-	  <footer class="footer">
-    <div class="container">
-      © 2025 Ross M. Hayduk
     </div>
+  </main>
+  <footer class="footer">
+    <div class="container">© 2025 Ross M. Hayduk</div>
   </footer>
-  </div>
 </body>
 </html>
