--- a/IST541/Lab3/page2.html
+++ b/IST541/Lab3/page2.html
@@ -28,13 +28,7 @@
         <h2 class="mt-0">Using HeyGen at CSUMB's MIST Program</h2>
         <p class="lede">This page embeds a YouTube tutorial video.</p>
         <div class="iframe-wrap">
-          <iframe
-            src="https://www.youtube.com/embed/CxCFtSjtSKc"
-            title="YouTube video player"
-            loading="lazy"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/CXJm-zxOmY8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <p class="mt-16"></p>
       </section>
