--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -26,9 +26,17 @@
     <div class="container">
       <section class="section">
         <h2 class="mt-0">Exploring AI Avatars in Education</h2>
-        <p class="lede">This page embeds an external document. Replace the URL with your specific Google Doc or tutorial.</p>
+        <p class="lede">This page embeds the Articulate Storyline tutorial Using AI Avatars in Education that was placed in the tool-content folder.</p>
         <div class="iframe-wrap">
-          <iframe src="https://docs.google.com/" title="Google Docs (example embed)"></iframe>
+          <iframe
+  			src="Tools/index.html"
+ 			title="Using AI Avatars in Education — Tools Index"
+  			width="100%"
+  			height="800"
+  			frameborder="0"
+  			loading="lazy"
+  			allowfullscreen
+		   ></iframe>
         </div>
         <p class="mt-16"></p>
       </section>
