--- a/IST541/Lab3/page4.html
+++ b/IST541/Lab3/page4.html
@@ -29,8 +29,8 @@
         <p class="lede">This page embeds the Articulate Storyline tutorial Using AI Avatars in Education that was placed in the tool-content folder.</p>
         <div class="iframe-wrap">
           <iframe
-  			src="Tools/index.html"
- 			title="Using AI Avatars in Education — Tools Index"
+  			src="tool-content/index.html"
+ 			title="Using AI Avatars in Education"
   			width="100%"
   			height="800"
   			frameborder="0"
